# nomad

./: .gitignore  .travis.yml  FMS.py  MANIFEST.in  README.md  README.rst  nomad.py  nomad_extract.py  requirements.txt  setup.py
examples/butatriene_vibronic/: butatriene.op  butatriene_fms_vibronic.inp  butatriene_fms_vibronic.ref  fms.input  fms.ref
examples/ethylene_columbus/: ethylene.xyz  ethylene_columbus.inp  ethylene_columbus.ref  fms.input  fms.ref
examples/henon-heiles_2d/: fms.input  henon-heiles.op  henon-heiles_collocation.inp
examples/pyrazine_vibronic/: fms.input  pyrazine4d.op  pyrazine_fms_vibronic.inp  pyrazine_fms_vibronic.ref
examples/spin_boson/: fms.input  pes.input
fmspy/: __main__.py
fmspy/basis/: atom_lib.py  bundle.py  centroid.py  hamiltonian.py  matching_pursuit.py  trajectory.py
fmspy/dynamics/: initialize.py  step.py  surface.py
fmspy/fmsio/: fileio.py
fmspy/integrals/: bra_ket_averaged.py  collocation.py  crude_adiabatic_saddle_point.py  crude_adiabatic_vibronic_2state.py  nuclear_gaussian.py  (+3 more)
nomad/: Makefile
nomad/analysis/: CMakeLists.txt  accuracy.mod  clone.f90  default.py  fileio.py  fms.f90  fms.mod  install_propagate  lib_amp.f90  lib_amp.mod  lib_den.f90  lib_traj.f90  lib_traj.mod  lib_utils.py  libden.mod  math.f90  math.mod  mce.f90  plot.py  populations.py  potentials.py
nomad/analysis/interface/: denutils.py  libutils.py  proputils.py
nomad/analysis/mods/: lib_utils.py  populations.py
nomad/analysis/src/common/: accuracy.f90  constants.f90
nomad/analysis/src/core/: density.f90  dynamics.f90  libamp.f90  libtraj.f90
nomad/analysis/src/integrals/: dirac.f90  integral.f90  lvc_ints.f90  lvc_mca.f90  quadpack.f90  quadrature.f90
nomad/analysis/utils/: fileio.py  fitting.py
src/: .gitignore  FMS.py  dynamics.py  fileio.py  initial.py  update.py
tests/: fms.input  output.summary  pes.input
(+407 files in other folders)
